--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - 6789:6789
     volumes:
       - .:/home/src/
-      - ~/Documents/secrets/personal-gcp.json:/home/src/personal-gcp.json
+#      - ~/Documents/secrets/:/home/src/keys/
     restart: on-failure:5
   postgres:
     image: postgres:14
